--- a/_posts/2025-04-04-ML_HW3.md
+++ b/_posts/2025-04-04-ML_HW3.md
@@ -2,9 +2,11 @@
 layout: post
 title: ML2025-HongyiLi-HW3-Understanding Transformer
 date: 2025-04-04 16:00:00
-summary: XXX
+summary: Transformer架构LLM的外部调用和内部Attention理解
 categories: ML2025-Hongyi_Li
 ---
+
+[TOC]
 
 * 实验采用 Model 如下：
   * `google/gemma-2-2b-it`
@@ -482,4 +484,6 @@ Task **Descriptions**: Plot and observe the figure of the attention map
 **Head** index (Recommended): 7
 
 <img src="https://raw.githubusercontent.com/sh10f/images/master/img/image-20250404190151064.png" alt="image-20250404190151064" style="zoom:67%;" />
+
+
 
